--- a/.github/workflows/24-7-news-bot.yml
+++ b/.github/workflows/24-7-news-bot.yml
@@ -2,12 +2,15 @@ name: 24/7 News Bot
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # Every 4 hours at minute 0
-  workflow_dispatch:       # Manual trigger
+    - cron: '0 */4 * * *'  # Every 4 hours
+  workflow_dispatch:        # Manual trigger
+  push:                     # Run on code push
+    branches: [ main ]
 
 jobs:
   run-news-bot:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     steps:
     - name: Checkout code
@@ -21,14 +24,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
+        pip install requests
         
     - name: Run THE6ISLAND News Bot
       env:
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         NEWSDATA_KEY: ${{ secrets.NEWSDATA_KEY }}
-        GROQ_KEY: ${{ secrets.GROQ_KEY }}
         WP_TOKEN: ${{ secrets.WP_TOKEN }}
         SITE_ID: ${{ secrets.SITE_ID }}
       run: python3 github_bot.py
