--- a/.github/workflows/24-7-bot.yml
+++ b/.github/workflows/24-7-bot.yml
@@ -22,13 +22,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests
+        pip install requests beautifulsoup4
         
-    - name: Run News Bot
+    - name: Run Perfect News Bot
       env:
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         NEWSDATA_KEY: ${{ secrets.NEWSDATA_KEY }}
         WP_TOKEN: ${{ secrets.WP_TOKEN }}
         SITE_ID: ${{ secrets.SITE_ID }}
-      run: python3 github_bot.py
+        GROQ_KEY: ${{ secrets.GROQ_KEY }}
+      run: python3 perfect_news_bot.py
