--- a/.github/workflows/24-7-bot.yml
+++ b/.github/workflows/24-7-bot.yml
@@ -2,13 +2,13 @@ name: 24/7 News Bot
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # Every 4 hours
-  workflow_dispatch:       # Manual trigger
+    - cron: '0 */4 * * *'  # Every 4 hours at minute 0
+  workflow_dispatch:        # Manual trigger
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     
     steps:
     - name: Checkout code
@@ -22,13 +22,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests
+        pip install requests beautifulsoup4
         
-    - name: Run Secure News Bot
+    - name: Run THE6ISLAND News Bot
       env:
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         NEWSDATA_KEY: ${{ secrets.NEWSDATA_KEY }}
         WP_TOKEN: ${{ secrets.WP_TOKEN }}
         SITE_ID: ${{ secrets.SITE_ID }}
-      run: python3 clean_bot.py
+      run: python3 github_bot.py
