--- a/.github/workflows/24-7-bot.yml
+++ b/.github/workflows/24-7-bot.yml
@@ -9,26 +9,26 @@ jobs:
   run-bot:
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-      
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
-        
+
     - name: Run THE6ISLAND News Bot
       env:
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-        NEWSDATA_KEY: ${{ secrets.NEWSDATA_KEY }}
-        WP_TOKEN: ${{ secrets.WP_TOKEN }}
-        SITE_ID: ${{ secrets.SITE_ID }}
+        SUPABASE_URL: "${{ secrets.SUPABASE_URL }}"
+        SUPABASE_KEY: "${{ secrets.SUPABASE_KEY }}"
+        NEWSDATA_KEY: "${{ secrets.NEWSDATA_KEY }}"
+        WP_TOKEN: "${{ secrets.WP_TOKEN }}"
+        SITE_ID: "${{ secrets.SITE_ID }}"
       run: python3 github_bot.py
