--- a/.github/workflows/24-7-bot.yml
+++ b/.github/workflows/24-7-bot.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
     
     steps:
     - name: Checkout code
@@ -19,11 +18,9 @@ jobs:
       with:
         python-version: '3.9'
         
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
-        
+    - name: Install requests
+      run: pip install requests
+      
     - name: Run Bot
       env:
         SUPABASE_URL: "${{ secrets.SUPABASE_URL }}"
