Fix: rename test_bot.py to github_bot.py

--- a/.github/workflows/24-7-bot.yml
+++ b/.github/workflows/24-7-bot.yml
@@ -28,4 +28,4 @@ jobs:
         NEWSDATA_KEY: "${{ secrets.NEWSDATA_KEY }}"
         WP_TOKEN: "${{ secrets.WP_TOKEN }}"
         SITE_ID: "${{ secrets.SITE_ID }}"
-      run: python3 test_bot.py
+      run: python3 github_bot.py
