FORCE UPDATE: Fix workflow and bot files

--- a/.github/workflows/24-7-bot.yml
+++ b/.github/workflows/24-7-bot.yml
@@ -21,25 +21,14 @@ jobs:
     - name: Install requests
       run: pip install requests
       
-    - name: Debug - List files
+    - name: List files (debug)
       run: ls -la
       
-    - name: Run Bot
+    - name: Run GitHub Bot
       env:
         SUPABASE_URL: "${{ secrets.SUPABASE_URL }}"
         SUPABASE_KEY: "${{ secrets.SUPABASE_KEY }}"
         NEWSDATA_KEY: "${{ secrets.NEWSDATA_KEY }}"
         WP_TOKEN: "${{ secrets.WP_TOKEN }}"
         SITE_ID: "${{ secrets.SITE_ID }}"
-      run: |
-        echo "=== STARTING BOT ==="
-        # Try to run whatever Python file exists
-        if [ -f "github_bot.py" ]; then
-          python3 github_bot.py
-        elif [ -f "test_bot.py" ]; then
-          python3 test_bot.py
-        else
-          echo "ERROR: No Python bot file found!"
-          ls -la *.py
-          exit 1
-        fi
+      run: python3 github_bot.py
