--- a/.github/workflows/24-7-bot.yml
+++ b/.github/workflows/24-7-bot.yml
@@ -18,15 +18,15 @@ jobs:
       with:
         python-version: '3.9'
         
-    - name: Install requests
+    - name: Install dependencies
       run: pip install requests
       
-    - name: Run GitHub Bot
+    - name: Run REAL News Bot
       env:
         SUPABASE_URL: "${{ secrets.SUPABASE_URL }}"
         SUPABASE_KEY: "${{ secrets.SUPABASE_KEY }}"
         NEWSDATA_KEY: "${{ secrets.NEWSDATA_KEY }}"
         WP_TOKEN: "${{ secrets.WP_TOKEN }}"
         SITE_ID: "${{ secrets.SITE_ID }}"
-        GROQ_KEY: "${{ secrets.GROQ_KEY }}"  # ADD THIS LINE!
+        GROQ_KEY: "${{ secrets.GROQ_KEY }}"
       run: python3 github_bot.py
